# mount-helicon

./: .gitignore  ARCHITECTURE.md  BLOG.md  CLAUDE.md  DEAD-NAME-SWEEP-2026-07-15.md  DEMO-SCRIPT.md  DEPLOY-FC.md  Dockerfile  Dockerfile.deploy  FINDINGS-2026-07-15.md  GOLDEN_SUBMISSION.md  HANDOFF-2026-07-16.md  HELICON_OS_FEATURE_MAP.md  HUMAN_ERROR_DISPLACEMENT.md  MOONSHOT-2026-07-16.md  NIGHTRUN-2026-07-13.md  NIGHTRUN-2026-07-15.md  OUTLINE.md  README.md  REVIEW-2026-07-16.md  ROT.md  SUBMISSION.md  VISION.md  action.yml  config.example.json  deploy.sh  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml  railway.json  render.yaml
docs/: ROUTE.md  RUNS.md  architecture-diagram.html
fc/: DEPLOY-READY.md  Dockerfile  Dockerfile.dockerignore  config.fc.json  deploy-fc.sh  deploy-guide.sh  entrypoint.sh  requirements.txt  s.yaml
glaze/: __main__.py  battery.py  cli.py  compiler.py  db.py  eval.py  mcp_server.py  reconcile.py  scanner.py  snapshots.py  triage.py  writeback.py
helicon/: __main__.py  aliases.py  attribution.py  audit.py  battery.py  brief.py  claims.py  cli.py  compiler.py  config.py  consistency.py  consolidation.py  context_impact.py  context_policy.py  db.py  demo.py  docdrift.py  embeddings.py  eval.py  focus.py  forgetting.py  gold.py  graph.py  guard.py  heal.py  identity.py  judge_bench.py  leaderboard.py  lenses.py  mcp_server.py  models.py  mover.py  pairing.py  patterns.py  playbooks.py  portrait.py  projects.py  provenance.py  qwen.py  reconcile.py  (+22 more)
mac/: .gitignore  Package.swift  make-app.sh
scripts/: battery_report.py  cloudshell-run.sh  com.morkeeth.helicon-nightly.plist  demo_agent_rules_regression.py  demo_graphiti_adapter.py  demo_mem0_audit.py  demo_public_store.sh  demo_realdrift.py  demo_reset.py  demo_seed.py  demo_skills_audit.py  demo_taste_bridge.py  dither_proto.py  judge-check.sh  nightly.sh  rot_bench_lifeos.py  seed.py
submission/: DEVPOST-FINAL.md  Mount-Helicon-Qwen-Cloud-Deck.pptx
tests/: test_alias_code_arm.py  test_aliases.py  test_api_findings_log.py  test_api_rot.py  test_attribution.py  test_brief.py  (+35 more)
(+109 files in other folders)
